test/files/neg/t1011.scala
package test;
import scala.xml._;

abstract class Test {
  //val entity : String;
  def primitiveHeader : NodeSeq = 
    Group({
       <dl><code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code>
           <code>{Text(entity)}</code></dl>
    } ++ // 3 seconds
    {}++ // 5 seconds
    {}++ // 10 seconds
    {}++ // 20 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 5 seconds
    {}++ // 10 seconds
    {}++ // 20 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 5 seconds
    {}++ // 10 seconds
    {}++ // 20 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    {}++ // 40 seconds
    <hr/>);
}
