test/files/neg/t1011.check
t1011.scala:8: error: not found: value entity
       <dl><code>{Text(entity)}</code>
                       ^
one error found
